--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>This month's challenge</h1>
-    <h2>Walk for 20 minutes</h2>
+    <h2>Walk for 20 minutes every day.</h2>
 
 </body>
 
