update monthly challenge template to display dynamic month name and challenge text

--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>This month's challenge</h1>
-    <h2>Walk for 20 minutes every day.</h2>
+    <h1>{{ month_name }} challenge</h1>
+    <h2>{{ text }}</h2>
 
 </body>
 
