--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>All Monthly Challenges</h1>
     <ul>
-        <p>{{ months }}</p>
+       {% for month in months %}
+        <li><a href="{% url 'month-challenge' month %}">{{ month|title }}</a></li>
+       {% endfor %}
     </ul>
     
 </body>
