--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>{{ month_name }} challenge</h1>
-    <h2>{{ text }}</h2>
+    {% if text is not None %} 
+      <p>{{ text }}</p>
+    {% else %}
+      <p>No challenge for this month</p>
+    {% endif %}
 
 </body>
 
