update challenge template to display challenge text as a heading

--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -10,7 +10,7 @@
 <body>
     <h1>{{ month_name }} challenge</h1>
     {% if text is not None %} 
-      <p>{{ text }}</p>
+      <h2>{{ text }}</h2>
     {% else %}
       <p>No challenge for this month</p>
     {% endif %}
