add content block to base template for flexible page content

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <title>{% block page_title %}Monthly Challenges - 2025{% endblock %}</title>
 </head>
 <body>
+    {% block content_block %}
+    ... sample content ...
+    {% endblock %}
     
 </body>
 </html>
