--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
-{% block page_title %}Monthly Challenges{% endblock %}
+{% block page_title %}
+All Challenges 2025
+{% endblock %}
 
 {% block content_block %}
+<ul>
+    {% for month in months %}
+    <li><a href="{% url 'month-challenge' month %}">{{ month|title }}</a></li>
+    {% endfor %}
+</ul>
+{% endblock %}
