--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block page_title %}Monthly Challenges - 2025{% endblock %}</title>
+    <title>{% block page_title %}{% endblock %}</title>
 </head>
 <body>
+    <h1>base title</h1>
     {% block content_block %}
-    ... sample content ...
     {% endblock %}
     
 </body>
