--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,9 +1,14 @@
-<body>
-    <h1>{{ month_name }} challenge</h1>
+{% extends 'base.html' %}
+
+{% block page_title %}
+  {{ month_name|title }} Challenge
+{% endblock %}
+
+{% block content_block %}
+    <h1>{{ month_name|title }} Challenge</h1>
     {% if text is not None %} 
       <h2>{{ text }}</h2>
     {% else %}
       <p>No challenge for this month</p>
     {% endif %}
-
-</body>
+{% endblock %}
