--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -5,6 +5,9 @@ All Challenges 2025
 {% endblock %}
 
 {% block content_block %}
+{% include "challenges/includes/header.html" %}
+
+<h1>All Challenges 2025</h1>
 <ul>
     {% for month in months %}
     <li><a href="{% url 'month-challenge' month %}">{{ month|title }}</a></li>
