--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content_block %}
-{% include "challenges/includes/header.html" %}
+{% include "challenges/includes/header.html" with active_page="challenge" %}
 
     <h1>{{ month_name|title }} Challenge</h1>
     {% if text is not None %} 
