--- a/challenges/templates/challenges/includes/header.html
+++ b/challenges/templates/challenges/includes/header.html
@@ -2,4 +2,6 @@
     <nav>
         <a href="{% url 'index' %}">All Challenges</a>
     </nav>
+    {{ month_name }}  <!-- TODO: remove temporary  -->
+    <p>active page = {{ active_page }}</p>
 </header>
