--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -5,7 +5,7 @@ All Challenges 2025
 {% endblock %}
 
 {% block content_block %}
-{% include "challenges/includes/header.html" %}
+{% include "challenges/includes/header.html" with active_page="index" %}
 
 <h1>All Challenges 2025</h1>
 <ul>
