--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block page_title %}{% endblock %}</title>
+    <title>{% block page_title %}Default Title{% endblock %}</title>
+    {% block css_files %}{% endblock %}
 </head>
 <body>
     {% block content_block %}
