add fallback class to no challenge message for improved styling

--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -17,6 +17,6 @@
     {% if text is not None %} 
       <h2>{{ text }}</h2>
     {% else %}
-      <p>No challenge for this month</p>
+      <p class="fallback">No challenge for this month</p>
     {% endif %}
 {% endblock %}
